--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "prettier": "^1.14.3",
     "prettier-eslint": "^8.8.2",
     "react-test-renderer": "^16.7.0-alpha.0",
-    "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-hot-middleware": "^2.24.3"
@@ -53,6 +52,7 @@
     "aws-sdk": "^2.345.0",
     "babel-polyfill": "^6.26.0",
     "eslint-plugin-react-hooks": "^0.0.0",
+    "esm": "^3.0.84",
     "express": "^4.16.4",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.11",
@@ -60,12 +60,13 @@
     "prop-types": "^15.6.2",
     "react": "16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
-    "react-hot-loader": "^4.3.11",
+    "react-hot-loader": "^4.3.12",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "request": "^2.88.0",
     "styled-components": "^4.0.3",
     "superagent": "^4.0.0-beta.5",
+    "webpack": "^4.25.1",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-hot-middleware": "^2.24.3"
   }
