--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Simple boilerplate",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "BABEL_ENV=production NODE_ENV=production yarn webpack --mode production --config webpack.prod.js",
+    "start": "nodemon .",
+    "start:prod": "yarn build && NODE_ENV=production node ."
   },
   "author": "",
   "license": "ISC",
@@ -22,26 +25,43 @@
     },
     "setupTestFrameworkScriptFile": "./setupTests.js"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
+    "@babel/core": "^7.1.5",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-env": "^7.1.5",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "babel-plugin-styled-components": "^1.8.0",
+    "babel-plugin-transform-imports": "^1.5.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.20",
     "babel7-jest": "^1.0.1",
+    "clean-webpack-plugin": "^0.1.19",
     "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^21.26.2",
+    "eslint-plugin-jest": "^22.0.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
+    "happypack": "^5.0.0",
+    "husky": "^1.1.3",
     "jest": "^23.6.0",
     "jest-styled-components": "^6.2.2",
-    "prettier": "^1.14.3",
+    "lint-staged": "^8.0.4",
+    "prettier": "^1.15.1",
     "prettier-eslint": "^8.8.2",
     "react-test-renderer": "^16.7.0-alpha.0",
     "webpack-cli": "^3.1.2",
@@ -49,14 +69,19 @@
     "webpack-hot-middleware": "^2.24.3"
   },
   "dependencies": {
-    "aws-sdk": "^2.345.0",
+    "aws-sdk": "^2.350.0",
     "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
     "eslint-plugin-react-hooks": "^0.0.0",
     "esm": "^3.0.84",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "express-winston": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
+    "nodemon": "^1.18.6",
     "prop-types": "^15.6.2",
     "react": "16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
@@ -68,6 +93,7 @@
     "superagent": "^4.0.0-beta.5",
     "webpack": "^4.25.1",
     "webpack-dev-middleware": "^3.4.0",
-    "webpack-hot-middleware": "^2.24.3"
+    "webpack-hot-middleware": "^2.24.3",
+    "winston": "^3.1.0"
   }
 }
