--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,10 @@
-version: '2'
+version: '2.1'
 
 services:
   app:
+    depends_on:
+      pg:
+        condition: service_healthy
     tty: true
     build:
       context: .
@@ -9,6 +12,9 @@ services:
     volumes:
       - ./src:/app/src:delegated
       - ./server:/app/server:delegated
+      - ./api:/app/api:delegated
+      - ./scripts:/app/scripts:delegated
+      - ./db:/app/db:delegated
     ports:
       - 3001:3001
       - 9229:9229
@@ -20,5 +26,10 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgres
     ports:
-    - "5432:5432"
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 1s
+      timeout: 1s
+      retries: 20
 
