--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "jest",
     "build": "BABEL_ENV=production NODE_ENV=production yarn webpack --mode production --config webpack.prod.js",
-    "start": "nodemon --inspect=0.0.0.0 .",
-    "start:prod": "yarn build && NODE_ENV=production node .",
+    "migrate": "./scripts/migrateAndSeed.sh",
+    "start": "yarn migrate && nodemon --inspect=0.0.0.0 .",
+    "start:prod": "yarn migrate && yarn build && NODE_ENV=production node .",
     "precommit": "lint-staged && npm run test"
   },
   "author": "",
@@ -33,17 +34,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.1.5",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-env": "^7.1.5",
-    "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
-    "babel-plugin-styled-components": "^1.8.0",
-    "babel-plugin-transform-imports": "^1.5.1",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.20",
     "babel7-jest": "^1.0.1",
-    "clean-webpack-plugin": "^0.1.19",
     "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.1.0",
@@ -65,9 +57,19 @@
     "webpack-hot-middleware": "^2.24.3"
   },
   "dependencies": {
+    "@babel/core": "^7.1.5",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/preset-env": "^7.1.5",
+    "@babel/preset-react": "^7.0.0",
     "aws-sdk": "^2.350.0",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-styled-components": "^1.8.0",
+    "babel-plugin-transform-imports": "^1.5.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.20",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
+    "clean-webpack-plugin": "^0.1.19",
+    "connect-pg-simple": "^5.0.0",
     "cookie-parser": "^1.4.3",
     "dotenv-safe": "^6.1.0",
     "eslint-plugin-react-hooks": "^0.0.0",
@@ -76,9 +78,12 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "express-winston": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "knex": "^0.15.2",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "nodemon": "^1.18.6",
+    "pg": "^7.6.1",
     "prop-types": "^15.6.2",
     "react": "16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
@@ -88,9 +93,11 @@
     "request": "^2.88.0",
     "styled-components": "^4.0.3",
     "superagent": "^4.0.0-beta.5",
+    "uuid": "^3.3.2",
     "webpack": "^4.25.1",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-hot-middleware": "^2.24.3",
+    "webpack-manifest-plugin": "^2.0.4",
     "winston": "^3.1.0"
   }
 }
