--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - ./api:/app/api:delegated
       - ./scripts:/app/scripts:delegated
       - ./db:/app/db:delegated
+      - ./shared:/app/shared:delegated
     ports:
       - 3001:3001
       - 9229:9229
