--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "Simple boilerplate",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "LOG_LEVEL=none jest",
     "build": "BABEL_ENV=production NODE_ENV=production yarn webpack --mode production --config webpack.prod.js",
     "migrate": "./scripts/migrateAndSeed.sh",
     "start": "yarn migrate && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
-    "start:prod": "yarn migrate && yarn build && NODE_ENV=production node .",
-    "precommit": "lint-staged && npm run test"
+    "start:prod": "yarn migrate && yarn build && NODE_ENV=production node ."
   },
   "author": "",
   "license": "ISC",
@@ -74,6 +73,7 @@
     "dotenv-safe": "^6.1.0",
     "eslint-plugin-react-hooks": "^0.0.0",
     "esm": "^3.0.84",
+    "exif-parser": "^0.1.12",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
@@ -82,9 +82,11 @@
     "knex": "^0.15.2",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
+    "multer": "^1.4.1",
     "nodemon": "^1.18.6",
     "pg": "^7.6.1",
     "prop-types": "^15.6.2",
+    "qs": "^6.5.2",
     "react": "16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
     "react-hot-loader": "^4.3.12",
