Added all the test infrastructure for integration tests.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "simple",
+  "name": "carpedalan",
   "version": "1.0.0",
-  "description": "Simple boilerplate",
+  "description": "Carpe Dalan",
   "main": "index.js",
   "scripts": {
     "test": "LOG_LEVEL=none jest",
+    "integration": "jest -c jestrc.js --forceExit --runInBand",
     "build": "BABEL_ENV=production NODE_ENV=production yarn webpack --mode production --config webpack.prod.js",
     "migrate": "./scripts/migrateAndSeed.sh",
     "start": "yarn migrate && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
@@ -24,6 +25,9 @@
     "transform": {
       "^.+\\.jsx?$": "babel7-jest"
     },
+    "roots": [
+      "src"
+    ],
     "setupTestFrameworkScriptFile": "./setupTests.js"
   },
   "lint-staged": {
@@ -34,42 +38,47 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "babel-preset-jest": "^23.2.0",
     "babel7-jest": "^1.0.1",
     "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.1.0",
+    "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^22.0.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
+    "glob": "7.1.3",
     "happypack": "^5.0.0",
-    "husky": "^1.1.3",
+    "husky": "^1.2.0",
     "jest": "^23.6.0",
-    "jest-styled-components": "^6.2.2",
-    "lint-staged": "^8.0.4",
-    "prettier": "^1.15.1",
+    "jest-styled-components": "^6.3.1",
+    "lighthouse": "^4.0.0-alpha.2-3.2.1",
+    "lint-staged": "^8.0.5",
+    "prettier": "^1.15.2",
     "prettier-eslint": "^8.8.2",
     "react-test-renderer": "^16.7.0-alpha.0",
+    "supertest": "^3.3.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-hot-middleware": "^2.24.3"
   },
   "dependencies": {
-    "@babel/core": "^7.1.5",
+    "@babel/core": "^7.1.6",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-react": "^7.0.0",
-    "aws-sdk": "^2.350.0",
+    "aws-sdk": "^2.360.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-styled-components": "^1.8.0",
     "babel-plugin-transform-imports": "^1.5.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.20",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
-    "clean-webpack-plugin": "^0.1.19",
+    "clean-webpack-plugin": "^1.0.0",
     "connect-pg-simple": "^5.0.0",
     "cookie-parser": "^1.4.3",
+    "docker-compose": "^0.9.1",
     "dotenv-safe": "^6.1.0",
     "eslint-plugin-react-hooks": "^0.0.0",
     "esm": "^3.0.84",
@@ -93,8 +102,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "request": "^2.88.0",
-    "styled-components": "^4.0.3",
-    "superagent": "^4.0.0-beta.5",
+    "styled-components": "^4.1.1",
+    "superagent": "^4.0.0",
     "uuid": "^3.3.2",
     "webpack": "^4.25.1",
     "webpack-dev-middleware": "^3.4.0",
