--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,10 @@
     "node": true,
     "jest/globals": true
   },  
+  "globals": {
+    "cy": false,
+    "Cypress": false
+  },
   "rules": {
     "func-names": ["error", "never"],
     "prettier/prettier": ["error"],
