--- a/package.json
+++ b/package.json
@@ -5,21 +5,28 @@
   "main": "index.js",
   "scripts": {
     "test": "LOG_LEVEL=none jest",
-    "integration": "jest -c jestrc.js --forceExit --runInBand",
+    "lint": "eslint src api db imageResizer scripts server shared",
+    "integration": "NODE_ENV=test PG_HOST=localhost PG_PORT=5555 jest -c jestrc.js --forceExit --runInBand",
+    "integration:ci": "PG_HOST=localhost NODE_ENV=ci jest -c jestrc.js --forceExit --runInBand --verbose",
     "build": "BABEL_ENV=production NODE_ENV=production yarn webpack --mode production --config webpack.prod.js",
-    "migrate": "./scripts/migrateAndSeed.sh",
-    "start": "yarn migrate && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
-    "start:prod": "yarn migrate && yarn build && NODE_ENV=production node ."
+    "migrateAndSeed": "MIGRATING=true ./scripts/migrateAndSeed.sh",
+    "migrate": "MIGRATING=true ./scripts/migrate.sh",
+    "start": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
+    "start:prod": "NODE_ENV=production node .",
+    "e2e": "CYPRESS_BASE_URL=http://localhost:3001 cypress open --env configFile=local",
+    "e2e:ci": "MIGRATING=true yarn migrate && yarn start:prod",
+    "test-junit": "cypress run --reporter junit --reporter-options 'mochaFile=junit-results/my-test-output.xml'",
+    "test-multiple": "cypress run --reporter mocha-multi-reporters --reporter-options configFile=config.json"
   },
   "author": "",
   "license": "ISC",
   "jest": {
     "coverageThreshold": {
       "global": {
-        "statements": 75.5,
-        "branches": 41.5,
-        "functions": 52.5,
-        "lines": 77
+        "statements": 70.5,
+        "branches": 40.5,
+        "functions": 50.5,
+        "lines": 75
       }
     },
     "transform": {
@@ -27,6 +34,10 @@
     },
     "roots": [
       "src"
+    ],
+    "reporters": [
+      "default",
+      "jest-junit"
     ],
     "setupTestFrameworkScriptFile": "./setupTests.js"
   },
@@ -44,7 +55,7 @@
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^22.0.0",
+    "eslint-plugin-jest": "^22.1.2",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
@@ -52,6 +63,7 @@
     "happypack": "^5.0.0",
     "husky": "^1.2.0",
     "jest": "^23.6.0",
+    "jest-junit": "^5.2.0",
     "jest-styled-components": "^6.3.1",
     "lighthouse": "^4.0.0-alpha.2-3.2.1",
     "lint-staged": "^8.0.5",
@@ -106,8 +118,6 @@
     "superagent": "^4.0.0",
     "uuid": "^3.3.2",
     "webpack": "^4.25.1",
-    "webpack-dev-middleware": "^3.4.0",
-    "webpack-hot-middleware": "^2.24.3",
     "webpack-manifest-plugin": "^2.0.4",
     "winston": "^3.1.0"
   }
