Added CI flag for prod runs for e2e

--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -26,6 +26,7 @@ services:
     image: $ECR_ENDPOINT/carpedev:$CIRCLE_SHA1
     environment:
       NODE_ENV: production
+      CI: "true"
       PG_HOST: e2e_pg
       PG_USER: postgres
       PG_PASSWORD: postgres
