--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "migrate": "MIGRATING=true ./scripts/migrate.sh",
     "start": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
     "start:prod": "NODE_ENV=production node .",
-    "e2e": "CYPRESS_BASE_URL=http://localhost:3001 cypress open --env configFile=local",
+    "e2e": "CYPRESS_BASE_URL=http://localhost cypress open --env configFile=local",
     "e2e:ci": "MIGRATING=true yarn migrate && yarn start:prod",
     "test-junit": "cypress run --reporter junit --reporter-options 'mochaFile=junit-results/my-test-output.xml'",
     "test-multiple": "cypress run --reporter mocha-multi-reporters --reporter-options configFile=config.json",
@@ -88,6 +88,7 @@
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "clean-webpack-plugin": "^1.0.0",
+    "compression-webpack-plugin": "^2.0.0",
     "connect-pg-simple": "^5.0.0",
     "cookie-parser": "^1.4.3",
     "dotenv-safe": "^6.1.0",
