--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "react-hot-loader": "^4.3.12",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-virtualized": "^9.21.0",
     "request": "^2.88.0",
     "styled-components": "^4.1.1",
     "superagent": "^4.0.0",
