--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
     "start:prod": "NODE_ENV=production node .",
     "e2e": "CYPRESS_BASE_URL=http://localhost cypress open --env configFile=local",
-    "e2e:ci": "MIGRATING=true NODE_ENV=ci yarn migrate && yarn start:prod",
+    "e2e:ci": "MIGRATING=true NODE_ENV=ci yarn migrate NODE_ENV=ci yarn knex seed:run --knexfile db/knexfile.js && yarn start:prod",
     "test-junit": "cypress run --reporter junit --reporter-options 'mochaFile=junit-results/my-test-output.xml'",
     "test-multiple": "cypress run --reporter mocha-multi-reporters --reporter-options configFile=config.json",
     "updateConfig": "aws s3 cp .env-prod s3://configurations-pipeline/.env --profile carpedev"
@@ -113,7 +113,6 @@
     "react-hot-loader": "^4.3.12",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-virtualized": "^9.21.0",
     "request": "^2.88.0",
     "styled-components": "^4.1.1",
     "superagent": "^4.0.0",
