--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
-    "glob": "7.1.3",
     "happypack": "^5.0.0",
     "husky": "^1.2.0",
     "jest": "^23.6.0",
@@ -123,6 +122,9 @@
     "winston": "^3.1.0"
   },
   "optionalDependencies": {
-    "cypress": "3.1.3"
+    "cypress": "3.1.3",
+    "fs-extra": "^7.0.1",
+    "glob": "7.1.3"
+
   }
 }
