--- a/imageResizer/package.json
+++ b/imageResizer/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "docker run -v \"$PWD\":/var/task lambci/lambda:build-nodejs8.10 npm install",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "zip -r -X ../imageResizer.zip * && cd .. && aws lambda update-function-code --function-name carpedalan --zip-file fileb://imageResizer.zip --profile carpedalan",
-    "stage": "zip -r -X ../imageResizer.zip * && cd .. && aws lambda update-function-code --function-name carpedev --zip-file fileb://imageResizer.zip --profile carpedev"
+    "deploy": "cp ../shared/constants.js . && zip -r -X ../imageResizer.zip * && cd .. && aws lambda update-function-code --function-name carpedalan-west --zip-file fileb://imageResizer.zip --profile carpedev --region us-west-2",
+    "stage": "cp ../shared/constants.js . && zip -r -X ../imageResizer.zip * && cd .. && aws lambda update-function-code --function-name carpedalan-west --zip-file fileb://imageResizer.zip --profile carpedev --region us-west-2"
   },
   "author": "",
   "license": "ISC",
