--- a/package.json
+++ b/package.json
@@ -5,21 +5,29 @@
   "main": "index.js",
   "scripts": {
     "test": "LOG_LEVEL=none jest",
-    "integration": "jest -c jestrc.js --forceExit --runInBand",
+    "lint": "eslint src api db imageResizer scripts server shared",
+    "integration": "NODE_ENV=test PG_HOST=localhost PG_PORT=5555 jest -c jestrc.js --forceExit --runInBand",
+    "integration:ci": "PG_HOST=localhost NODE_ENV=ci jest -c jestrc.js --forceExit --runInBand --verbose",
     "build": "BABEL_ENV=production NODE_ENV=production yarn webpack --mode production --config webpack.prod.js",
-    "migrate": "./scripts/migrateAndSeed.sh",
-    "start": "yarn migrate && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
-    "start:prod": "yarn migrate && yarn build && NODE_ENV=production node ."
+    "migrateAndSeed": "MIGRATING=true ./scripts/migrateAndSeed.sh",
+    "migrate": "MIGRATING=true ./scripts/migrate.sh",
+    "start": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
+    "start:prod": "NODE_ENV=production node .",
+    "e2e": "CYPRESS_BASE_URL=http://localhost cypress open --env configFile=local",
+    "e2e:ci": "MIGRATING=true NODE_ENV=ci yarn migrate NODE_ENV=ci yarn knex seed:run --knexfile db/knexfile.js && yarn start:prod",
+    "test-junit": "cypress run --reporter junit --reporter-options 'mochaFile=junit-results/my-test-output.xml'",
+    "test-multiple": "cypress run --reporter mocha-multi-reporters --reporter-options configFile=config.json",
+    "updateConfig": "aws s3 cp .env-prod s3://configurations-pipeline/.env --profile carpedev"
   },
   "author": "",
   "license": "ISC",
   "jest": {
     "coverageThreshold": {
       "global": {
-        "statements": 75.5,
-        "branches": 41.5,
-        "functions": 52.5,
-        "lines": 77
+        "statements": 70.5,
+        "branches": 40.5,
+        "functions": 50.5,
+        "lines": 75
       }
     },
     "transform": {
@@ -27,6 +35,10 @@
     },
     "roots": [
       "src"
+    ],
+    "reporters": [
+      "default",
+      "jest-junit"
     ],
     "setupTestFrameworkScriptFile": "./setupTests.js"
   },
@@ -40,18 +52,20 @@
     "babel-eslint": "^10.0.1",
     "babel-preset-jest": "^23.2.0",
     "babel7-jest": "^1.0.1",
-    "eslint": "^5.8.0",
+    "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^22.0.0",
+    "eslint-plugin-jest": "^22.1.2",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
+    "fs-extra": "^7.0.1",
     "glob": "7.1.3",
     "happypack": "^5.0.0",
     "husky": "^1.2.0",
     "jest": "^23.6.0",
+    "jest-junit": "^5.2.0",
     "jest-styled-components": "^6.3.1",
     "lighthouse": "^4.0.0-alpha.2-3.2.1",
     "lint-staged": "^8.0.5",
@@ -59,26 +73,25 @@
     "prettier-eslint": "^8.8.2",
     "react-test-renderer": "^16.7.0-alpha.0",
     "supertest": "^3.3.0",
-    "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-hot-middleware": "^2.24.3"
   },
   "dependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-env": "^7.1.5",
+    "@babel/core": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "aws-sdk": "^2.360.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-styled-components": "^1.8.0",
     "babel-plugin-transform-imports": "^1.5.1",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.20",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.21",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "clean-webpack-plugin": "^1.0.0",
+    "compression-webpack-plugin": "^2.0.0",
     "connect-pg-simple": "^5.0.0",
     "cookie-parser": "^1.4.3",
-    "docker-compose": "^0.9.1",
     "dotenv-safe": "^6.1.0",
     "eslint-plugin-react-hooks": "^0.0.0",
     "esm": "^3.0.84",
@@ -92,10 +105,10 @@
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "multer": "^1.4.1",
-    "nodemon": "^1.18.6",
-    "pg": "^7.6.1",
+    "nodemon": "^1.18.7",
+    "pg": "^7.7.1",
     "prop-types": "^15.6.2",
-    "qs": "^6.5.2",
+    "qs": "^6.6.0",
     "react": "16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
     "react-hot-loader": "^4.3.12",
@@ -106,9 +119,11 @@
     "superagent": "^4.0.0",
     "uuid": "^3.3.2",
     "webpack": "^4.25.1",
-    "webpack-dev-middleware": "^3.4.0",
-    "webpack-hot-middleware": "^2.24.3",
+    "webpack-cli": "^3.1.2",
     "webpack-manifest-plugin": "^2.0.4",
     "winston": "^3.1.0"
+  },
+  "optionalDependencies": {
+    "cypress": "3.1.3"
   }
 }
