--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "eslint-plugin-react-hooks": "^0.0.0",
     "esm": "^3.0.84",
     "exif-parser": "^0.1.12",
+    "exifreader": "^2.5.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
@@ -115,6 +116,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "request": "^2.88.0",
+    "sharp": "^0.21.1",
     "styled-components": "^4.1.1",
     "superagent": "^4.0.0",
     "uuid": "^3.3.2",
