--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -13,6 +13,7 @@ services:
         condition: service_healthy
     volumes: 
       - ./cypress:/app/cypress/
+      - ./db:/app/db/
       - ./.env:/app/.env
       - ./.env.example:/app/.env.example
     command: bash -c "ls -al && ls cypress -al && pwd && yarn cypress run --env configFile=ci --reporter junit --reporter-options 'mochaFile=/app/cypress/test-output.xml'"  
