--- a/cypress/Dockerfile
+++ b/cypress/Dockerfile
@@ -4,5 +4,6 @@ RUN yarn add cypress@3.1.3
 RUN yarn add dotenv-safe
 RUN yarn add aws-sdk
 RUN yarn add knex
+RUN yarn add pg
 COPY cypress.json .
 
