--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -7,6 +7,7 @@ services:
       ## this enables colors in the output
       TERM: xterm
       NODE_ENV: ci
+      PG_HOST: e2e_pg
       CYPRESS_BASE_URL: http://e2e_app
 
     depends_on:
@@ -15,7 +16,8 @@ services:
     volumes: 
       - ./cypress:/app/cypress/
       - ./db:/app/db/
-      - ./aou:/app/api/
+      - ./api:/app/api/
+      - ./shared:/app/shared/
       - ./.env:/app/.env
       - ./.env.example:/app/.env.example
     command: bash -c "ls -al && ls cypress -al && pwd && yarn cypress run --env configFile=ci --reporter junit --reporter-options 'mochaFile=/app/cypress/test-output.xml'"  
