Admin test coverage (#6)
* Added e2e test for multi upload

* Added support for portrait uploads

* Admin test coverage (#5)

* Added exif parser

* Fixed plugins and added pagination

* Added plugin

* Added db folder to e2e

* Fixed deps

* Added try catch

* Fixed seed

* Added some logging

* Added pg host

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "migrate": "MIGRATING=true ./scripts/migrate.sh",
     "start": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
     "start:prod": "NODE_ENV=production node .",
-    "e2e": "CYPRESS_BASE_URL=http://localhost cypress open --env configFile=local",
+    "e2e": "PG_PORT=5555 PG_HOST=localhost CYPRESS_BASE_URL=http://localhost cypress open --env configFile=local",
     "e2e:ci": "MIGRATING=true NODE_ENV=ci yarn migrate NODE_ENV=ci yarn knex seed:run --knexfile db/knexfile.js && yarn start:prod",
     "test-junit": "cypress run --reporter junit --reporter-options 'mochaFile=junit-results/my-test-output.xml'",
     "test-multiple": "cypress run --reporter mocha-multi-reporters --reporter-options configFile=config.json",
@@ -96,6 +96,7 @@
     "eslint-plugin-react-hooks": "^0.0.0",
     "esm": "^3.0.84",
     "exif-parser": "^0.1.12",
+    "exifreader": "^2.5.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
@@ -115,6 +116,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "request": "^2.88.0",
+    "sharp": "^0.21.1",
     "styled-components": "^4.1.1",
     "superagent": "^4.0.0",
     "uuid": "^3.3.2",
