--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "react-hot-loader": "^4.3.12",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-virtualized": "^9.21.0",
     "request": "^2.88.0",
     "sharp": "^0.21.1",
     "styled-components": "^4.1.1",
