--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "exif-parser": "^0.1.12",
     "exifreader": "^2.5.0",
     "express": "^4.16.4",
+    "express-cache-controller": "^1.1.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "express-winston": "^3.0.1",
