--- a/imageResizer/package.json
+++ b/imageResizer/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "sharp": "^0.21.0"
+    "knex": "^0.16.3",
+    "sharp": "^0.21.0",
+    "sqip": "^0.3.3"
   }
 }
