Added sidebar and some basic styling

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,6 +21,7 @@ http {
     server {
     listen 443 http2 ssl;
     listen [::]:443 http2 ssl;
+    client_max_body_size 10M;
 
     location / {
       proxy_pass http://node-app;
