--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "react-hot-loader": "^4.6.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-select": "^2.2.0",
     "react-virtualized": "^9.21.0",
     "request": "^2.88.0",
     "sharp": "^0.21.1",
