Added hash for grid/list

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "LOG_LEVEL=none jest",
-    "lint": "eslint src api db imageResizer scripts server shared",
+    "lint": "eslint src api db imageResizer scripts server shared  --ext .js,.jsx",
     "integration": "NODE_ENV=test PG_HOST=localhost PG_PORT=5555 jest -c jestrc.js --forceExit --runInBand",
     "integration:ci": "PG_HOST=localhost NODE_ENV=ci jest -c jestrc.js --forceExit --runInBand --verbose",
     "build": "BABEL_ENV=production NODE_ENV=production yarn webpack --mode production --config webpack.prod.js",
