--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,8 @@
     "import/order": ["error", {"groups": ["builtin", "external", "parent", "sibling", "index"], "newlines-between" : "always"}],
     "react-hooks/rules-of-hooks": "error",
     "jsx-a11y/click-events-have-key-events": "off",
-    "jsx-a11y/no-static-element-interactions": "off"
+    "jsx-a11y/no-static-element-interactions": "off",
+    "no-console": "error"
   },
   "overrides": [
     {
